--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <script src="./assets/js/script.js" defer></script>
     <title>VaiBee</title>
   </head>
-  <body class="h-dvh bg-amber-300"></body>
+  <body class="h-dvh bg-[#595959]">
+    <h1 class="text-8xl text-amber-300">Teste</h1>
+  </body>
 </html>
