--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <script src="./assets/js/script.js" defer></script>
     <title>VaiBee</title>
   </head>
-  <body class="h-dvh bg-[#595959]">
-    <h1 class="text-8xl text-amber-300">Teste</h1>
+  <body class="h-dvh bg-[#595959] px-12 py-10">
+    <header class="flex w-full items-center justify-between">
+      <div class="w-fit">
+        <a class="flex animate-pulse hover:scale-110" href="/"
+          ><img class="w-20" src="./assets/img/logo.png" alt="logo"
+        /></a>
+      </div>
+      <form class="w-[60%]" action="">
+        <input
+          class="h-10 w-full bg-amber-100 px-8"
+          type="text"
+          placeholder="Digite o artista ou a música desejada"
+        />
+      </form>
+    </header>
   </body>
 </html>
