--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
   </head>
   <body class="h-dvh bg-[#595959] px-12 py-10">
     <header class="flex w-full items-center justify-between">
-      <div class="w-fit">
+      <div class="flex w-fit gap-10">
         <a class="flex animate-pulse hover:scale-110" href="/"
           ><img class="w-20" src="./assets/img/logo.png" alt="logo"
         /></a>
+        <h1 class="text-7xl text-[#ceaa2c]">
+          Vai<span class="italic">Bee</span>
+        </h1>
       </div>
-      <form class="w-[60%]" action="">
+
+      <form class="w-3/5" action="">
         <input
-          class="h-10 w-full bg-amber-100 px-8"
+          class="h-10 w-full rounded bg-amber-100 px-8"
           type="text"
-          placeholder="Digite o artista ou a música desejada"
+          placeholder="O que vamos ouvir hoje?"
         />
       </form>
     </header>
