--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>VaiBee</title>
   </head>
   <body class="h-dvh bg-[#595959] px-12 py-10">
-    <header class="flex w-full items-center justify-between">
+    <header class="flex w-full items-center justify-between pb-10">
       <div class="flex w-fit gap-10">
         <a class="flex animate-pulse hover:scale-110" href="/"
           ><img class="w-20" src="./assets/img/logo.png" alt="logo"
@@ -20,11 +20,38 @@
 
       <form class="w-3/5" action="">
         <input
-          class="h-10 w-full rounded bg-amber-100 px-8"
+          class="h-10 w-full rounded-full bg-amber-100 px-8"
           type="text"
           placeholder="O que vamos ouvir hoje?"
         />
       </form>
     </header>
+    <main class="grid h-max grid-cols-3 gap-10 *:text-[#ceaa2c]">
+      <h1 class="col-span-full pb-4 text-center text-6xl">Músicas Recentes</h1>
+      <div class="">
+        <h2 class="pb-6 text-center text-4xl">Pop</h2>
+        <section class="flex gap-10">
+          <img src="./assets/img/wireframe-home.png" alt="" />
+        </section>
+      </div>
+      <div class="">
+        <h2 class="pb-6 text-center text-4xl">Rock</h2>
+        <section class="flex gap-10">
+          <img src="./assets/img/wireframe-home.png" alt="" />
+        </section>
+      </div>
+      <div class="">
+        <h2 class="pb-6 text-center text-4xl">Nacional</h2>
+        <section class="flex gap-10">
+          <img src="./assets/img/wireframe-home.png" alt="" />
+        </section>
+      </div>
+      <p class="col-span-full pb-10">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+        porro pariatur assumenda sint neque corporis ipsam tempora repellendus
+        perferendis laborum quis quo cumque, sed quod nulla ut commodi nam?
+        Placeat?
+      </p>
+    </main>
   </body>
 </html>
