testes com o fetch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>VaiBee</title>
   </head>
   <body class="h-dvh bg-[#595959] px-12 py-10">
-    <header class="flex w-full items-center justify-between pb-10">
+    <header class="flex w-full items-center justify-between bg-gray-600 pb-10">
       <div class="flex w-fit gap-10">
         <a class="flex animate-pulse hover:scale-110" href="/"
           ><img class="w-20" src="./assets/img/logo.png" alt="logo"
@@ -31,7 +31,7 @@
       <div class="">
         <h2 class="pb-6 text-center text-4xl">Pop</h2>
         <section class="flex gap-10">
-          <img src="./assets/img/wireframe-home.png" alt="" />
+          <img id="imgPop" src="" alt="" />
         </section>
       </div>
       <div class="">
