inicio layout mobile

--- a/index.html
+++ b/index.html
@@ -7,31 +7,34 @@
     <script src="./assets/js/script.js" defer></script>
     <title>VaiBee</title>
   </head>
-  <body class="h-dvh bg-[#595959] px-12 py-10">
-    <header class="flex w-full items-center justify-between bg-gray-600 pb-10">
-      <div class="flex w-fit gap-10">
+  <body class="h-dvh bg-[#282828] *:px-4 *:py-2">
+    <header
+      class="mb-5 flex w-full items-center justify-center gap-5 bg-gray-600 pb-10"
+    >
+      <div class="flex w-fit">
         <a class="flex animate-pulse hover:scale-110" href="/"
-          ><img class="w-20" src="./assets/img/logo.png" alt="logo"
+          ><img class="size-24" src="./assets/img/logo.png" alt="logo"
         /></a>
-        <h1 class="text-7xl text-[#ceaa2c]">
-          Vai<span class="italic">Bee</span>
-        </h1>
       </div>
-
-      <form class="w-3/5" action="">
+      <h1 class="text-6xl text-[#f2e9cc]">
+        Vai<span class="text-[#ceaa2c] italic">Bee</span>
+      </h1>
+    </header>
+    <section>
+      <form class="" action="">
         <input
-          class="h-10 w-full rounded-full bg-amber-100 px-8"
+          class="h-10 w-full rounded-full bg-amber-100 px-8 text-2xl font-semibold text-[#282828]"
           type="text"
           placeholder="O que vamos ouvir hoje?"
         />
       </form>
-    </header>
-    <main class="grid h-max grid-cols-3 gap-10 *:text-[#ceaa2c]">
+    </section>
+    <!-- <main class="grid h-max grid-cols-3 gap-10 *:text-[#ceaa2c]">
       <h1 class="col-span-full pb-4 text-center text-6xl">Músicas Recentes</h1>
       <div class="">
         <h2 class="pb-6 text-center text-4xl">Pop</h2>
         <section class="flex gap-10">
-          <img id="imgPop" src="" alt="" />
+          <img id="imgPop" src="./assets/img/wireframe-home.png" alt="" />
         </section>
       </div>
       <div class="">
@@ -52,6 +55,6 @@
         perferendis laborum quis quo cumque, sed quod nulla ut commodi nam?
         Placeat?
       </p>
-    </main>
+    </main> -->
   </body>
 </html>
