--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="./assets/js/script.js" defer></script>
     <title>VaiBee</title>
   </head>
-  <body class="h-dvh bg-[#282828] *:px-4 *:py-2">
+  <body class="h-dvh bg-[#282828]">
     <header
-      class="mb-5 flex w-full items-center justify-center gap-5 bg-gray-600 pb-10"
+      class="mb-10 flex w-full items-center justify-center gap-5 bg-gray-600 p-4"
     >
       <div class="flex w-fit">
         <a class="flex animate-pulse hover:scale-110" href="/"
@@ -20,7 +20,7 @@
         Vai<span class="text-[#ceaa2c] italic">Bee</span>
       </h1>
     </header>
-    <section>
+    <section class="mb-10 px-4">
       <form class="" action="">
         <input
           class="h-10 w-full rounded-full bg-amber-100 px-8 text-2xl font-semibold text-[#282828]"
@@ -29,32 +29,26 @@
         />
       </form>
     </section>
-    <!-- <main class="grid h-max grid-cols-3 gap-10 *:text-[#ceaa2c]">
-      <h1 class="col-span-full pb-4 text-center text-6xl">Músicas Recentes</h1>
-      <div class="">
-        <h2 class="pb-6 text-center text-4xl">Pop</h2>
-        <section class="flex gap-10">
-          <img id="imgPop" src="./assets/img/wireframe-home.png" alt="" />
-        </section>
-      </div>
-      <div class="">
-        <h2 class="pb-6 text-center text-4xl">Rock</h2>
-        <section class="flex gap-10">
-          <img src="./assets/img/wireframe-home.png" alt="" />
-        </section>
-      </div>
-      <div class="">
-        <h2 class="pb-6 text-center text-4xl">Nacional</h2>
-        <section class="flex gap-10">
-          <img src="./assets/img/wireframe-home.png" alt="" />
-        </section>
-      </div>
-      <p class="col-span-full pb-10">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-        porro pariatur assumenda sint neque corporis ipsam tempora repellendus
-        perferendis laborum quis quo cumque, sed quod nulla ut commodi nam?
-        Placeat?
-      </p>
-    </main> -->
+    <main class="*:text-[#ceaa2c]" id="main">
+      <h1 class="mb-10 px-4 text-center text-4xl">Músicas em alta</h1>
+      <section
+        class="grid h-max w-full grid-cols-1 gap-10 bg-gray-600 pt-5 xl:grid-cols-3"
+      >
+        <article class="mb-5 px-5">
+          <section class="flex items-center justify-around">
+            <picture class="">
+              <img
+                class="size-40 rounded-2xl"
+                id="imgPop"
+                src="./assets/img/wireframe-home.png"
+                alt=""
+              />
+            </picture>
+            <h2 class="pb-6 text-4xl">Música</h2>
+            <p class="col-span-full">Artista</p>
+          </section>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
