add logica sessão musicas em alta

--- a/index.html
+++ b/index.html
@@ -30,24 +30,23 @@
       </form>
     </section>
     <main class="*:text-[#ceaa2c]" id="main">
-      <h1 class="mb-10 px-4 text-center text-4xl">Músicas em alta</h1>
-      <section
-        class="grid h-max w-full grid-cols-1 gap-10 bg-gray-600 pt-5 xl:grid-cols-3"
-      >
-        <article class="mb-5 px-5">
-          <section class="flex items-center justify-around">
-            <picture class="">
+      <section class="px-4">
+        <h1 class="mb-5 px-4 text-center text-4xl">Músicas em alta</h1>
+        <section class="flex gap-0 overflow-x-auto" id="musicasEmAlta">
+          <!-- <article class="items-center justify-around p-5 hover:bg-gray-600">
+            <picture>
               <img
-                class="size-40 rounded-2xl"
+                class="mb-5 rounded-2xl"
                 id="imgPop"
                 src="./assets/img/wireframe-home.png"
                 alt=""
               />
             </picture>
-            <h2 class="pb-6 text-4xl">Música</h2>
-            <p class="col-span-full">Artista</p>
-          </section>
-        </article>
+            <h2 class="text-3xl">Música</h2>
+            <span class="">Album</span>
+            <p class="">Artista</p>
+          </article> -->
+        </section>
       </section>
     </main>
   </body>
