--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <main class="*:text-[#ceaa2c]" id="main">
       <section class="px-4">
         <h1 class="mb-5 px-4 text-center text-4xl">Músicas em alta</h1>
-        <section class="flex gap-0 overflow-x-auto" id="musicasEmAlta">
-          <!-- <article class="items-center justify-around p-5 hover:bg-gray-600">
+        <section class="flex gap-5 overflow-x-auto" id="musicasEmAlta">
+          <!-- <article
+            class="h-[150px] min-w-[150px] flex-1 items-center justify-around p-5 hover:bg-gray-600"
+          >
             <picture>
               <img
                 class="mb-5 rounded-2xl"
