ajuste cores das fontes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="h-dvh bg-[#282828]">
     <header
-      class="mb-10 flex w-full items-center justify-center gap-5 bg-gray-600 p-4"
+      class="mb-10 flex w-full items-center justify-center gap-5 bg-[#414141] p-4"
     >
       <div class="flex w-fit">
         <a class="flex animate-pulse hover:scale-110" href="/"
@@ -17,7 +17,7 @@
         /></a>
       </div>
       <h1 class="text-6xl text-[#f2e9cc]">
-        Vai<span class="text-[#ceaa2c] italic">Bee</span>
+        Vai<span class="text-[#ffbb00] italic">Bee</span>
       </h1>
     </header>
     <section class="mb-10 px-4">
@@ -29,7 +29,7 @@
         />
       </form>
     </section>
-    <main class="*:text-[#ceaa2c]" id="main">
+    <main class="*:text-[#ffbb00]" id="main">
       <section class="px-4">
         <h1 class="mb-5 px-4 text-center text-4xl">Músicas em alta</h1>
         <section class="flex gap-5 overflow-x-auto" id="musicasEmAlta">
