ajustes gerais na interface e inclusão de z-index para rolagem de pagina

--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
     <title>VaiBee</title>
   </head>
   <body class="h-dvh bg-[#282828]">
-    <header
-      class="mb-10 flex w-full items-center justify-center gap-5 bg-[#414141] p-4"
-    >
-      <div class="flex w-fit">
-        <a class="flex animate-pulse hover:scale-110" href="/"
-          ><img class="size-24" src="./assets/img/logo.png" alt="logo"
-        /></a>
-      </div>
-      <h1 class="text-6xl text-[#f2e9cc]">
-        Vai<span class="text-[#ffbb00] italic">Bee</span>
-      </h1>
-    </header>
-    <section class="mb-10 px-4">
-      <form class="" action="">
-        <input
-          class="h-10 w-full rounded-full bg-amber-100 px-8 text-2xl font-semibold text-[#282828]"
-          type="text"
-          placeholder="O que vamos ouvir hoje?"
-        />
-      </form>
+    <section class="fixed top-0 z-50 w-full bg-[#282828] pb-5">
+      <header
+        class="flex w-full items-center justify-center gap-5 bg-[#414141] p-4"
+      >
+        <div class="flex w-fit">
+          <a class="flex animate-pulse hover:scale-110" href="/"
+            ><img class="size-24" src="./assets/img/logo.png" alt="logo"
+          /></a>
+        </div>
+        <h1 class="text-6xl text-[#f2e9cc]">
+          Vai<span class="text-[#ffbb00] italic">Bee</span>
+        </h1>
+      </header>
+      <section class="mt-10 px-4">
+        <form class="" action="">
+          <input
+            class="h-10 w-full rounded-full bg-amber-100 px-8 text-2xl font-semibold text-[#282828]"
+            type="text"
+            placeholder="O que vamos ouvir hoje?"
+          />
+        </form>
+      </section>
     </section>
-    <main class="*:text-[#ffbb00]" id="main">
+
+    <main class="mt-60 *:text-[#ffbb00]" id="main">
       <section class="px-4">
         <h1 class="mb-5 px-4 text-center text-4xl">Músicas em alta</h1>
         <section class="flex gap-5 overflow-x-auto" id="musicasEmAlta">
@@ -44,7 +47,7 @@
                 alt=""
               />
             </picture>
-            <h2 class="text-3xl ">Música</h2>
+            <h2 class="text-3xl">Música</h2>
             <span class="">Album</span>
             <p class="">Artista</p>
           </article> -->
