layout sessao musicas em alta e header ok (mobile). Pendente definir proxima sessao

--- a/index.html
+++ b/index.html
@@ -31,27 +31,13 @@
         </form>
       </section>
     </section>
-
     <main class="mt-60 *:text-[#ffbb00]" id="main">
       <section class="px-4">
         <h1 class="mb-5 px-4 text-center text-4xl">Músicas em alta</h1>
-        <section class="flex gap-5 overflow-x-auto" id="musicasEmAlta">
-          <!-- <article
-            class="h-[150px] min-w-[150px] flex-1 items-center justify-around p-5 hover:bg-gray-600"
-          >
-            <picture>
-              <img
-                class="mb-5 rounded-2xl"
-                id="imgPop"
-                src="./assets/img/wireframe-home.png"
-                alt=""
-              />
-            </picture>
-            <h2 class="text-3xl">Música</h2>
-            <span class="">Album</span>
-            <p class="">Artista</p>
-          </article> -->
-        </section>
+        <section
+          class="flex gap-5 overflow-x-auto"
+          id="musicasEmAlta"
+        ></section>
       </section>
     </main>
   </body>
