--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
       </section>
     </section>
     <main class="mt-60 *:text-[#ffbb00]" id="main">
-      <section class="px-4">
+      <section class="mb-5 px-4">
         <h1 class="mb-5 px-4 text-center text-4xl">Músicas em alta</h1>
         <section
           class="flex gap-5 overflow-x-auto"
           id="musicasEmAlta"
         ></section>
+      </section>
+      <section class="mb-5 px-4">
+        <h1 class="mb-5 px-4 text-center text-4xl">Playlists</h1>
+        <section class="flex gap-5 overflow-x-auto" id="playLists"></section>
       </section>
     </main>
   </body>
