testes de inclusao de player de musica para o preview da musica selecionada

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/output.css" />
-    <script src="./assets/js/script.js" defer></script>
+    <script src="./assets/js/script.js" defer type="module"></script>
     <title>VaiBee</title>
   </head>
   <body class="h-dvh bg-[#282828]">
@@ -35,7 +35,7 @@
       <section class="my-10 px-4">
         <h1 class="mb-10 px-4 text-center text-4xl">Músicas em alta</h1>
         <section class="flex gap-5 overflow-x-auto" id="musicasEmAlta">
-          <a href="">
+          <!-- <a href="">
             <article
               class="min-w-[250px] flex-1 cursor-pointer items-center justify-around p-5 transition duration-300 hover:bg-[#414141]"
             >
@@ -48,7 +48,7 @@
               <span class="text-[#f2e9cc]">MOLHO (Ao Vivo)</span>
               <p class="text-[#f2e9cc]">Grupo Menos É Mais</p>
             </article></a
-          >
+          > -->
         </section>
       </section>
       <section class="my-10 px-4">
