--- a/index.html
+++ b/index.html
@@ -54,22 +54,10 @@
     <main class="mt-60 mb-10 *:text-[#ffbb00]" id="main">
       <section class="my-10 px-4">
         <h1 class="mb-10 px-4 text-center text-4xl">Músicas em alta</h1>
-        <section class="flex gap-5 overflow-x-auto" id="musicasEmAlta">
-          <!-- <a href="">
-            <article
-              class="min-w-[250px] flex-1 cursor-pointer items-center justify-around p-5 transition duration-300 hover:bg-[#414141]"
-            >
-              <picture
-                ><img
-                  class="mb-5 rounded-2xl"
-                  src="https://cdn-images.dzcdn.net/images/cover/b4ba96de5c901cc03fc4c211e31f1beb/250x250-000000-80-0-0.jpg"
-              /></picture>
-              <h2 class="truncate text-2xl">P do Pecado</h2>
-              <span class="text-[#f2e9cc]">MOLHO (Ao Vivo)</span>
-              <p class="text-[#f2e9cc]">Grupo Menos É Mais</p>
-            </article></a
-          > -->
-        </section>
+        <section
+          class="flex gap-5 overflow-x-auto"
+          id="musicasEmAlta"
+        ></section>
       </section>
       <section class="my-10 px-4">
         <h1 class="mb-10 px-4 text-center text-4xl">Playlists</h1>
