ajuste de grid das sessoes playlist e podcasts

--- a/index.html
+++ b/index.html
@@ -79,13 +79,17 @@
           id="musicasEmAlta"
         ></section>
       </section>
-      <section class="my-10 px-4">
-        <h1 class="mb-10 px-4 text-center text-4xl">Playlists</h1>
-        <section class="flex gap-5 overflow-x-clip" id="playLists"></section>
+      <section class="my-10 px-4 lg:my-20">
+        <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
+          Playlists
+        </h1>
+        <section class="grid lg:grid-cols-5 lg:gap-5" id="playLists"></section>
       </section>
-      <section class="my-10 px-4">
-        <h1 class="mb-10 px-4 text-center text-4xl">Podcasts</h1>
-        <section class="flex gap-5 overflow-x-clip" id="podcasts"></section>
+      <section class="my-10 px-4 lg:my-20">
+        <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
+          Podcasts
+        </h1>
+        <section class="grid lg:grid-cols-5 lg:gap-5" id="podcasts"></section>
       </section>
     </main>
   </body>
