API não entrega preview de audio para podcastas e playlists. necessário criar uma condição para estes casos

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
           id="musicasEmAlta"
         ></section>
       </section> -->
+
       <section class="my-10 px-4 lg:my-20">
         <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
           Em alta
         </h1>
         <section
-          class="grid lg:grid-cols-5 lg:gap-5"
+          class="grid grid-cols-2 lg:grid-cols-5 lg:gap-5"
           id="musicasEmAlta"
         ></section>
       </section>
@@ -83,13 +84,19 @@
         <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
           Playlists
         </h1>
-        <section class="grid lg:grid-cols-5 lg:gap-5" id="playLists"></section>
+        <section
+          class="grid grid-cols-2 lg:grid-cols-5 lg:gap-5"
+          id="playLists"
+        ></section>
       </section>
       <section class="my-10 px-4 lg:my-20">
         <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
           Podcasts
         </h1>
-        <section class="grid lg:grid-cols-5 lg:gap-5" id="podcasts"></section>
+        <section
+          class="grid grid-cols-2 lg:grid-cols-5 lg:gap-5"
+          id="podcasts"
+        ></section>
       </section>
     </main>
   </body>
