ajuestes gerais de fonte e estilos

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <ul
           class="hidden cursor-pointer text-2xl text-[#f2e9cc] *:hover:bg-[#ffbb00] *:hover:text-[#282828] lg:flex lg:justify-between lg:gap-10"
         >
-          <li class="rounded-full p-4 transition duration-300">
-            <a href="#musicasEmAlta">Músicas em Alta</a>
+          <li class="rounded-full p-4 transition duration-300 hover:italic">
+            <a href="#musicasEmAlta">Em Alta</a>
           </li>
-          <li class="rounded-full p-4 transition duration-300">
+          <li class="rounded-full p-4 transition duration-300 hover:italic">
             <a href="#playLists">Playlists</a>
           </li>
-          <li class="rounded-full p-4 transition duration-300">
+          <li class="rounded-full p-4 transition duration-300 hover:italic">
             <a href="#podcasts">Podcasts</a>
           </li>
         </ul>
         <form class="hidden lg:flex" action="">
           <input
-            class="h-10 w-full rounded-full bg-amber-100 px-8 text-2xl font-semibold text-[#282828]"
+            class="h-10 w-full rounded-full border-none bg-amber-100 px-8 text-2xl font-semibold text-[#282828] shadow-none focus:border-[#ffbb00] focus:ring-2 focus:ring-[#ffbb00] focus:outline-none"
             type="text"
             placeholder="O que vamos ouvir hoje?"
           />
@@ -72,7 +72,7 @@
       </section> -->
 
       <section class="my-10 px-4 lg:my-20">
-        <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
+        <h1 class="mb-10 px-4 text-center text-4xl italic xl:mb-20 xl:text-7xl">
           Em alta
         </h1>
         <section
@@ -81,7 +81,7 @@
         ></section>
       </section>
       <section class="my-10 px-4 lg:my-20">
-        <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
+        <h1 class="mb-10 px-4 text-center text-4xl italic xl:mb-20 xl:text-7xl">
           Playlists
         </h1>
         <section
@@ -90,7 +90,7 @@
         ></section>
       </section>
       <section class="my-10 px-4 lg:my-20">
-        <h1 class="mb-10 px-4 text-center text-4xl xl:mb-20 xl:text-7xl">
+        <h1 class="mb-10 px-4 text-center text-4xl italic xl:mb-20 xl:text-7xl">
           Podcasts
         </h1>
         <section
