--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="#podcasts">Podcasts</a>
           </li>
         </ul>
-        <form class="lg:flex" action="">
+        <form class="hidden lg:flex" action="">
           <input
             class="h-10 w-full rounded-full border-none bg-amber-100 px-8 text-2xl font-semibold text-[#282828] shadow-none placeholder:text-amber-100 focus:border-[#ffbb00] focus:ring-2 focus:ring-[#ffbb00] focus:outline-none"
             type="text"
