--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           action=""
         >
           <input
-            class="h-10 w-[100%] rounded-full border-none bg-amber-100 px-8 text-2xl font-semibold text-[#282828] shadow-none placeholder:text-amber-100 focus:border-[#ffbb00] focus:ring-2 focus:ring-[#ffbb00] focus:outline-none"
+            class="h-10 w-[100%] rounded-full border-none bg-amber-100 px-3 text-2xl font-semibold text-[#282828] shadow-none focus:border-[#ffbb00] focus:ring-2 focus:ring-[#ffbb00] focus:outline-none"
             type="text"
             placeholder="O que vamos ouvir hoje?"
           />
