header tablet ok

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   <body class="scroll-smooth bg-[#282828]">
     <section class="sticky top-0 z-50 w-full bg-[#282828]">
       <header
-        class="grid w-full auto-rows-min grid-cols-2 grid-rows-2 items-center justify-center gap-0 bg-[#414141] px-4 pt-4 pb-0 lg:grid-cols-3 lg:grid-rows-1 lg:justify-between lg:px-30"
+        class="grid w-full auto-rows-min grid-cols-2 grid-rows-2 items-center justify-center gap-0 bg-[#414141] px-4 pt-4 pb-0 md:grid-cols-3 md:grid-rows-1 lg:grid-cols-3 lg:justify-between lg:px-30"
       >
         <div
-          class="col-span-full flex w-fit items-center gap-5 place-self-center"
+          class="col-span-full flex w-fit items-center gap-5 place-self-center md:col-[1]"
         >
           <a class="flex animate-pulse hover:scale-110" href="/"
             ><img class="size-24" src="./assets/img/logo.png" alt="logo"
@@ -56,7 +56,7 @@
           </li>
         </ul>
         <form
-          class="col-span-full max-w-[300px] place-self-center lg:flex"
+          class="col-span-full max-w-[300px] place-self-center md:col-[3] lg:flex"
           action=""
         >
           <input
