--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div
           class="col-span-full flex w-fit items-center gap-5 place-self-center md:col-[1]"
         >
-          <a class="flex animate-pulse hover:scale-110" href="/"
+          <a class="flex animate-pulse hover:scale-110" href="" id="logo"
             ><img class="size-24" src="./assets/img/logo.png" alt="logo"
           /></a>
           <h1 class="text-6xl text-[#f2e9cc]">
