--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="scroll-smooth bg-[#282828]">
     <section class="sticky top-0 z-50 w-full bg-[#282828]">
       <header
-        class="grid w-full auto-rows-min grid-cols-2 grid-rows-2 items-center justify-center gap-0 bg-[#414141] px-4 pt-4 pb-0 md:grid-cols-3 md:grid-rows-1 lg:grid-cols-[max-content_max-content_max-content] lg:justify-between lg:px-10"
+        class="grid w-full auto-rows-min grid-cols-2 grid-rows-[auto_auto] items-center justify-center gap-0 bg-[#414141] px-4 pt-4 pb-5 md:grid-cols-3 md:grid-rows-1 lg:grid-cols-[max-content_max-content_max-content] lg:justify-between lg:px-10"
       >
         <div
           class="col-span-full flex w-fit items-center gap-5 place-self-center md:col-[1]"
@@ -40,7 +40,7 @@
           action=""
         >
           <input
-            class="h-10 w-[100%] rounded-full border-none bg-amber-100 px-3 text-2xl font-semibold text-[#282828] shadow-none focus:border-[#ffbb00] focus:ring-2 focus:ring-[#ffbb00] focus:outline-none"
+            class="h-10 w-[100%] rounded-full border-none bg-amber-100 px-3 text-xl font-semibold text-[#282828] shadow-none focus:border-[#ffbb00] focus:ring-2 focus:ring-[#ffbb00] focus:outline-none"
             type="text"
             placeholder="O que vamos ouvir hoje?"
           />
