--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             class="h-10 w-[100%] rounded-full border-none bg-amber-100 px-3 text-xl font-semibold text-[#282828] shadow-none focus:border-[#ffbb00] focus:ring-2 focus:ring-[#ffbb00] focus:outline-none"
             type="text"
             placeholder="O que vamos ouvir hoje?"
+            id="inputBar"
           />
         </form>
       </header>
