--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         </form>
       </header>
     </section>
-    <main class="mb-10 *:text-[#ffbb00] lg:px-30" id="main">
+    <main class="mb-10 lg:px-30" id="main">
       <section class="my-10 px-4 lg:my-20">
-        <h1 class="mb-10 px-4 text-center text-4xl italic xl:mb-20 xl:text-7xl">
+        <h1
+          class="mb-10 px-4 text-center text-4xl text-[#ffbb00] italic xl:mb-20 xl:text-7xl"
+        >
           Em alta
         </h1>
         <section
@@ -59,7 +61,9 @@
         ></section>
       </section>
       <section class="my-10 px-4 lg:my-20">
-        <h1 class="mb-10 px-4 text-center text-4xl italic xl:mb-20 xl:text-7xl">
+        <h1
+          class="mb-10 px-4 text-center text-4xl text-[#ffbb00] italic xl:mb-20 xl:text-7xl"
+        >
           Playlists
         </h1>
         <section
@@ -68,7 +72,9 @@
         ></section>
       </section>
       <section class="my-10 px-4 lg:my-20">
-        <h1 class="mb-10 px-4 text-center text-4xl italic xl:mb-20 xl:text-7xl">
+        <h1
+          class="mb-10 px-4 text-center text-4xl text-[#ffbb00] italic xl:mb-20 xl:text-7xl"
+        >
           Podcasts
         </h1>
         <section
